# packages/libs/src/types/ScrapeSchema.ts
@@ -16,7 +16,7 @@ const pickedSchema = baseSchema.pick({
     extract_source: true,
 });
 
-export const scrapeSchema = pickedSchema.transform((data) => ({
+export const scrapeSchema = pickedSchema.transform((data: z.infer<typeof pickedSchema>) => ({
     url: data.url,
     engine: data.engine,
     options: {
@@ -25,12 +25,22 @@ export const scrapeSchema = pickedSchema.transform((data) => ({
         formats: data.formats,
         timeout: data.timeout,
         retry: data.retry,
-        waitFor: data.wait_for,
-        includeTags: data.include_tags,
-        excludeTags: data.exclude_tags,
+        wait_for: data.wait_for,
+        include_tags: data.include_tags,
+        exclude_tags: data.exclude_tags,
         json_options: data.json_options,
-        extractSource: data.extract_source,
+        extract_source: data.extract_source,
     }
 }));
 
+export const TemplateScrapeSchema = scrapeSchema.transform((data: z.infer<typeof scrapeSchema>) => {
+    const { templateId, ...optionsWithoutTemplate } = data.options;
+    return {
+        url: data.url,
+        engine: data.engine,
+        ...optionsWithoutTemplate,
+    };
+});
+
+export type TemplateScrapeSchema = z.infer<typeof TemplateScrapeSchema>;
 export type ScrapeSchema = z.infer<typeof scrapeSchema>;
